# fantasy-league-backend

./: Dockerfile  Makefile  docker-compose.yml  pyproject.toml  pytest.ini
src/: manage.py
src/apps/match/: admin.py  apps.py  models.py
src/apps/match/migrations/: 0001_initial.py  0002_alter_matchevent_additional_minute.py  0003_remove_match_processed.py  0004_matchaction_remove_matchevent_for_display_and_more.py  0005_news.py
src/apps/match/services/: gameweek_manager.py  line_up_manager.py  match_service.py  summary_manager.py
src/apps/match/testing/: factories.py
src/apps/statistics/: apps.py  models.py  tasks.py
src/apps/statistics/migrations/: 0001_initial.py
src/apps/statistics/services/: player_points_manager.py
src/apps/team/: admin.py  models.py
src/apps/team/migrations/: 0001_initial.py  0002_clubinfo.py  0003_alter_clubinfo_club.py  0004_alter_clubinfo_club.py  0005_player_card_image_player_card_image_link_and_more.py  0006_communityleague_communityleaguemembers.py
src/apps/team/testing/: factories.py
src/apps/user/: admin.py
src/constants/: match_actions.py
src/core/drf_spectacular/: schema_generator.py
src/core/utils/: dateutils.py  stringutils.py
src/fantasy_league/: asgi.py  urls.py  wsgi.py
src/fantasy_league/settings/: __init__.py  apps.py  auth_user.py  databases.py  drf_spectacular.py  file_storage.py  rest_framework.py  simple_jwt.py  tasks.py
src/rest_api/: exception_handler.py  pagination.py
src/rest_api/internal/: urls.py
src/rest_api/testing/: api_test_case.py  entity_test_api.py
variables/: minio.env
(+28 files in other folders)
