[tool.poetry]
name = "fantasy-league-backend"
version = "0.1.0"
description = ""
authors = ["Anton <apodvalnikov@softeqlab.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.7"
environ = "^1.0"
django-environ = "^0.12.0"
psycopg2-binary = "^2.9.10"
djangorestframework = "^3.16.0"
djangorestframework-simplejwt = "^5.5.0"
drf-spectacular = "^0.28.0"
django-filter = "^25.1"
pytest = "^8.3.5"
pytest-django = "^4.11.1"
pytest-cov = "^6.1.1"
factory-boy = "^3.3.3"
django-cors-headers = "^4.7.0"
django-storages = "^1.14.6"
gunicorn = "^23.0.0"
jsonschema = "^4.23.0"
jsonschema-specifications = "^2024.10.1"
coverage = "^7.8.0"
redis = "^5.2.1"
huey = "^2.5.3"





[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
